--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ Home
 	position: relative;
 	height: 50%;
 	min-height: 400px;
-	background-image: url(/img/Banner2_2.jpg);
+	background-image: url(/img/bannerfinal.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	-webkit-background-size: cover;
